# rootcode

./: Dockerfile  DockerfileScript  README.md  alembic.ini  docker-compose.yml  pyproject.toml
app/api/: server.py
app/api/routes/: __init__.py  diagram_route.py
app/core/: config.py  tasks.py
app/db/: tasks.py
app/db/migrations/: env.py
app/db/migrations/versions/: 569227472afd_create_static_table.py
app/db/repositories/: diagram.py
app/diagram_service/diagrams/: stat_diagram.py
app/socket_server/: tasks.py
script/: client.py
