[tool.poetry]
name = "rootcode"
version = "0.1.0"
description = ""
authors = ["rafildavletberdin <r.davletberdin@profinansy.net>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
fastapi = "^0.100.0"
uvicorn = "^0.23.0"
databases = {extras = ["asyncpg"], version = "^0.7.0"}
python-socketio = "^5.8.0"
setuptools = "^68.0.0"
alembic = "^1.11.1"
pandas = "^2.0.3"
matplotlib = "^3.7.2"
sqlalchemy = "^1.4.48"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
